#PK-1265 background job to update tiers when tier settings update

--- a/src/Kooco.Pikachu.Blazor/Pages/Members/Members.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Members/Members.razor
@@ -175,7 +175,7 @@
                         {
                             <MemberTagComponent Tag="@(context.IsBlacklisted ? MemberConsts.MemberTags.Blacklisted : MemberConsts.MemberTags.New)" />
                         }
-                        else if (context.IsMember)
+                        else
                         {
                             <MemberTagComponent Tag="@MemberConsts.MemberTags.Existing" />
                         }
