--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -139,10 +139,10 @@
         <div class="row">
             <div class="col-2">@L["GroupBuyTime"]</div>
             <div class="col-5">
-                <DatePicker TValue="DateTime?" @bind-Date="CreateGroupBuyDto.StartTime" InputMode="DateInputMode.DateTime" Placeholder="@L["StartTime"]" />
+                <DatePicker TValue="DateTime?" @bind-Date="CreateGroupBuyDto.StartTime" TimeAs24hr InputMode="DateInputMode.DateTime" Placeholder="@L["StartTime"]" />
             </div>
             <div class="col-5">
-                <DatePicker TValue="DateTime?" @bind-Date="CreateGroupBuyDto.EndTime" InputMode="DateInputMode.DateTime" Placeholder="@L["EndTime"]" />
+                <DatePicker TValue="DateTime?" @bind-Date="CreateGroupBuyDto.EndTime" TimeAs24hr InputMode="DateInputMode.DateTime" Placeholder="@L["EndTime"]" />
             </div>
         </div>
 
