--- a/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantWallets/TenantWalletList.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantWallets/TenantWalletList.razor
@@ -1,4 +1,5 @@
 ﻿@page "/TenantManagement/TenantWalletList"
+@using Kooco.Pikachu.TenantManagement.TenantWallet
 @attribute [Authorize(PikachuPermissions.TenantWallet.Default)]
 @inherits FormManagement<FormEntranceBase, TenantWalletResultDto>
 
