--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -752,13 +752,29 @@
         <div class="row">
             <div class="col-2">@L["Gateway"]</div>
             <div class="col-2">@L["PaymentMethod"] <span class="text-danger"> *</span></div>
-            <div class="col-4">
+            <div class="col-8">
 
                 @*   <input type="radio" class="form-check-input" name="PaymentGateway" id="payment-gateway-1" checked="@CreateGroupBuyDto.IsDefaultPaymentGateWay" @onclick="() => CreateGroupBuyDto.IsDefaultPaymentGateWay = true" />
                 <label class="form-check-label" for="payment-gateway-1">
                 @L["DefaultPaymentGateWay"]
                 </label> *@
-                <Check TValue="bool" Disabled=@(CreateGroupBuyDto.IsEnterprise||isPaymentMethodEnabled()) @bind-Checked="@CreditCard">@L["CreditCard"]</Check>
+                <Check TValue="bool" Disabled=@(CreateGroupBuyDto.IsEnterprise||isPaymentMethodEnabled())
+                       Checked="@CreditCard"
+                       CheckedChanged="OnCreditCardCheckedChange">
+                    @L["CreditCard"]
+                </Check>
+                <div class="row justify-content-center mb-2">
+                    <div class="col-12">
+                        @foreach (var period in Constant.InstallmentPeriods)
+                        {
+                            <Check Inline TValue="bool" Checked="@CreateGroupBuyDto.InstallmentPeriods.Contains(period)"
+                                   CheckedChanged="(e) => OnInstallmentPeriodChange(e, period)"
+                                   Disabled="IsInstallmentPeriodEnabled(period)">
+                                @L["InstallmentPeriods." + period]
+                            </Check>
+                        }
+                    </div>
+                </div>
                 <Check TValue="bool" Disabled=@(CreateGroupBuyDto.IsEnterprise||isPaymentMethodEnabled()) @bind-Checked="@BankTransfer">@L["BankTransfer"]</Check>
                 <Check TValue="bool" Disabled=@(CreateGroupBuyDto.IsEnterprise||isLinePayPaymentMethodEnabled()) @bind-Checked="@IsLinePay">@L["LinePay"]</Check>
                 <Check TValue="bool"
