--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -8,6 +8,7 @@
 @using Kooco.Pikachu.Images
 @using Kooco.Pikachu.Items.Dtos;
 @using Kooco.Pikachu.Orders
+@using Kooco.Pikachu.PaymentGateways
 @using Kooco.Pikachu.Tenants
 @using Microsoft.Extensions.Configuration;
 @using Pikachu.Items;
@@ -27,6 +28,7 @@
 @inject IConfiguration _configuration
 @inject IJSRuntime JSRuntime;
 @inject IOrderAppService _OrderAppService;
+@inject IPaymentGatewayAppService PaymentGatewayAppService
 @attribute [Authorize]
 
 <style>
@@ -771,9 +773,22 @@
                 <Div Class="row">
                     <Check TValue="bool"
                            Disabled=@EditGroupBuyDto.IsEnterprise
-                           @bind-Checked="@CreditCard">
+                           Checked="@CreditCard"
+                           CheckedChanged="OnCreditCardCheckedChange">
                         @L["CreditCard"]
                     </Check>
+                    <div class="row justify-content-center mb-2">
+                        <div class="col-12">
+                            @foreach (var period in Constant.InstallmentPeriods)
+                            {
+                                <Check Inline TValue="bool" Checked="@EditGroupBuyDto.InstallmentPeriods.Contains(period)"
+                                       CheckedChanged="(e) => OnInstallmentPeriodChange(e, period)"
+                                       Disabled="IsInstallmentPeriodEnabled(period)">
+                                    @L["InstallmentPeriods." + period]
+                                </Check>
+                            }
+                        </div>
+                    </div>
                     <Check TValue="bool"
                            Disabled=@EditGroupBuyDto.IsEnterprise
                            @bind-Checked="@BankTransfer">
